# series-scraper

./: README.md  episode2_data.pkl  episode_data.pkl  imdb.ipynb  pyproject.toml  top_series.pkl  utils.py
.ipynb_checkpoints/: gender-eq-checkpoint.ipynb  imdb-Copy1-checkpoint.ipynb  imdb-checkpoint.ipynb
