[tool.poetry]
name = "gender-equality"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
numpy = "^1.21.1"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
BeautifulSoup = "^3.2.2"
redrover = "^0.7.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
